Fix overflow page width

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-body {
+html body {
+  margin: 0;
+  padding: 0;
   background-color: #ffffff;
   font-size: 18px;
   font-family: Arial;
@@ -7,7 +9,6 @@ body {
 ul {
   list-style-type: none;
   margin:0;
-  padding:0;
 }
 
 li {
@@ -26,7 +27,7 @@ li {
 
 .navbar{
   padding: 15px;
-  height: 30px;
+  height: 60px;
 }
 
 img {
@@ -98,9 +99,9 @@ footer {
   width: 100%;
   background-color: #f2f2f2;
   color: rgba(0,0,0,.54);
-  border: 1px solid #d2d2d2;
+  border-top: 1px solid #d2d2d2;
   height: 1.3em;
-  padding: 15px;
+  padding: 15px 0;
   vertical-align: middle;
   font-size: 20px;
 }
